# internal-iterator

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: adaptors.rs  alloc_impls.rs  from_fn_impl.rs  lib.rs  std_impls.rs  tests.rs
